Bug 19483 - Different header buttons text vertical alignment on iPhone and Android

--- a/skins/weborder_mobile/css/header.css
+++ b/skins/weborder_mobile/css/header.css
@@ -5,6 +5,9 @@
     position: absolute;
     font-size: 2.8em;
 }
+.header_block_buttons span {
+    vertical-align: middle;
+}
 .header_block_button_left {
     left: 0;
     margin-left: .25em;
